<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.barrelcoders.apps.vanipedia.ForgotPasswordActivity">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp" android:layout_height="0dp"
        android:padding="16dp"
        android:layout_alignParentStart="true"
        android:background="@drawable/screen_dot_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="24dp"
            android:background="#80000000"
            >
            <ImageView android:src="@drawable/sigin"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal" />
            <TextView android:id="@+id/label_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/Email"
                android:textSize="20dp"
                android:layout_marginBottom="3dp"
                ></TextView>
            <EditText android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/YourEmail"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:textSize="15dp"
                android:backgroundTint="@color/colorWhite"
                android:layout_marginBottom="5dp"
                android:textCursorDrawable="@null"/>
            <Button
                android:id="@+id/btnSendPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/SendPasswordOnMail"
                android:textColor="@color/colorBlack"
                android:background="@drawable/roundedbutton"
                android:textStyle="bold"
                android:textAllCaps="true"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/AlreayAMember"
                    android:textColor="#CCCCCC"
                    android:gravity="center"
                    android:textSize="16dip"
                    android:autoLink="all"/>
                <TextView android:id="@+id/btnSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/SignInHere"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:textSize="16dip"
                    android:autoLink="all"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
